[package]
name = "rm-cloudshim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"

[dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
axum = "0.7.5"
maud = { version = "0.26.0", features = ["axum"] }

color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = "0.3.34"
pnet = { version = "0.34.0", default-features = false, features = ["std"] }
